<resources>
    <string name="app_name">Your Bookmarks</string>
    <string name="title">Your Bookmarks</string>
    <string name="btn_init">Add</string>
    <string name="btn_wrong_short_url">Wrong short URL</string>
    <string name="btn_wrong_long_url">Wrong URL</string>
    <string name="btn_already_exists">Try another short URL</string>
    <string name="long_url">Full URL</string>
    <string name="short_url">Short URL</string>
    <string name="text_short">Bookmark: </string>
    <string name="reg">Registration</string>
    <string name="btn_reg">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>