<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingHorizontal="60dp"
        android:text="@string/reg"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/password" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/pass_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="234dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/hints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-210dp"
        android:layout_marginHorizontal="120dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/btn_reg" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_alternates"
        android:text="or"
        android:textColor="@color/hints"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>