<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="end"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/logout"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingHorizontal="60dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/longUrlField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/long_url"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates"
        android:hint="@string/long_url"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/hints" />

    <EditText
        android:id="@+id/shortUrlField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates"
        android:autofillHints="@string/short_url"
        android:hint="@string/short_url"
        android:inputType="text"
        android:minHeight="48dp"
        android:backgroundTint="@color/white"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/hints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:layout_marginHorizontal="60dp"
        android:background="@color/btn"
        android:text="@string/btn_init" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/button"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="5dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="1dp" />

</LinearLayout>